Fix statistics-nav and logos elements placement when notificationbar is visible

--- a/shared/scss/base/common/vars.scss
+++ b/shared/scss/base/common/vars.scss
@@ -73,6 +73,7 @@ $card-border-highlight-color-active: $brand-success;
 // Navigation
 $navbar-background-color: #f8f8f8;
 
+$notificationbar-height: $base + 24px;
 $navbar-height: 60px;
 $navbar-margin-bottom: 0;
 $nav-link-hover-bg: transparent;
