--- a/shared/scss/components/common/logos.scss
+++ b/shared/scss/components/common/logos.scss
@@ -55,3 +55,11 @@
     }
   }
 }
+
+.notification ~ .logos {
+  margin-top: $content-padding-top + $notificationbar-height;
+
+  @media(min-width: $grid-float-breakpoint) {
+    margin-top: $content-padding-top-desktop + $notificationbar-height;
+  }
+}
